[project]
name = "nixietune"
version = "0.0.3"
authors = [
    { name="Grebennikov Roman", email="grv@dfdx.me" },
]
description = "A semantic search embedding model fine-tuning tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: GPU",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sentence_transformers==2.2.2",
    "torch==2.1.2",
    "transformers==4.36.2",
    "zstandard",
    "accelerate==0.25.0",
    "torchmetrics==1.2.1",
    "datasets==2.16.1",
    "wandb",
    "mteb==1.1.1",
    "beir==2.0.0",
    "info-nce-pytorch"
]
test = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/nixiesearch/nixietune"
Issues = "https://github.com/nixiesearch/nixietune/issues"

[tool.ruff]
line-length = 119

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"