[project]
name = "nixietune"
version = "0.0.6"
authors = [
    { name="Grebennikov Roman", email="grv@dfdx.me" },
]
description = "A semantic search embedding model fine-tuning tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: GPU",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sentence_transformers==3.0.1",
    "torch==2.3.1",
    "transformers==4.41.2",
    "zstandard",
    "accelerate==0.31.0",
    "torchmetrics",
    "datasets==2.20.0",
    "wandb",
    "info-nce-pytorch",
    "peft==0.11.1",
    "bitsandbytes==0.43.1",
    "evaluate",
    "trl==0.9.4",
    "sentencepiece",
    "hnswlib",
    "wheel"
]

[project.optional-dependencies]
test = [
    "pytest", "pytest-skip-slow", "ruff"
]

[project.urls]
Homepage = "https://github.com/nixiesearch/nixietune"
Issues = "https://github.com/nixiesearch/nixietune/issues"

[tool.ruff]
line-length = 119

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


